--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,6 +21,7 @@ spring:
     enabled: true
     baseline-version: 0
     baseline-on-migrate: true
+    locations: filesystem:db/migration
 
 mybatis-plus:
   mapper-locations: classpath:mapping/*Mapper.xml
